Regression: Auto perspective fails when switching from {front, side, top} to camera view, and then to user persp. #39252

Closed
opened 2014-03-18 18:00:40 +01:00 by Sam Brubaker · 7 comments

Broken in version 2.70 RC2 (win 64)
Working in version 2.69 stable

How to reproduce:

  • Open Blender and enable Auto Perspective in the user preferences
  • Rotate view in user perspective using MMB
  • Choose an orthographic view (numpad 1, 3, or 7) in the 3D view
  • Go to camera view (numpad 0)

Use MMB to go back into user perspective. Notice that in 2.70 RC2, the view switches to user ortho instead.

It seems that leaving Camera view with MMB does not switch back to user perspective if the user was in front, side, or top view before they went into camera view. This causes unexpected results and defeats the original purpose of Auto Perspective.

Broken in version 2.70 RC2 (win 64) Working in version 2.69 stable How to reproduce: - Open Blender and enable Auto Perspective in the user preferences - Rotate view in user perspective using MMB - Choose an orthographic view (numpad 1, 3, or 7) in the 3D view - Go to camera view (numpad 0) # Use MMB to go back into user perspective. Notice that in 2.70 RC2, the view switches to user ortho instead. It seems that leaving Camera view with MMB does not switch back to user perspective if the user was in front, side, or top view before they went into camera view. This causes unexpected results and defeats the original purpose of Auto Perspective.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @rocketman

Added subscriber: @rocketman

This issue was referenced by blender/blender-addons-contrib@df25dbf917

This issue was referenced by blender/blender-addons-contrib@df25dbf917ffd4d13d6ce736d4eb06a4579aeb22

This issue was referenced by df25dbf917

This issue was referenced by df25dbf917ffd4d13d6ce736d4eb06a4579aeb22

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit df25dbf917.

Closed by commit df25dbf917.

Added subscriber: @mont29

Added subscriber: @mont29
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39252
No description provided.