Fix T39252: Regression: Auto perspective fails when switching from {front, side, top} to camera view, and then to user persp.

When leaving cam view, if autopersp is ON, and previous view was an axis one, we have to force new view in perspective mode - else, we reuse previous stored mode (persp or ortho).